--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
       "explorer/context": [
         {
           "command": "folder-creator.create",
-          "group": "navigation"
+          "group": "navigation",
+          "when": "explorerResourceIsFolder && filesExplorerFocus"
         }
       ]
     }
