--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "folder-creator",
-  "displayName": "folder_creator",
-  "description": "Estensione per creare nuove folder",
+  "displayName": "RN Folder Creator",
+  "description": "Estensione per creare nuove folder RN comompleta di componente e file di test",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url" : "https://github.com/RickyJam/RN-Folder-Creator"
+  },
   "engines": {
     "vscode": "^1.63.0"
   },
